# jan

./: CLAUDE.md  Cargo.toml
examples/: README.md  fibonacci.rs
jan-core/: Cargo.toml  build.rs
jan-core/src/: janet.rs  lib.rs  shared.rs
jan-macros/: Cargo.toml
jan-macros/src/: ast.rs  lib.rs
src/: debug.rs  janet.rs  main.rs
