[workspace]
members = ["jan-core", "jan-macros"]
resolver = "2"

[workspace.dependencies]
syn = { version = "2.0", features = ["full", "parsing"] }
quote = "1.0"
proc-macro2 = "1.0"

[package]
name = "jan"
version = "0.1.0"
edition = "2024"

[dependencies]
jan-core = { path = "jan-core" }
jan-macros = { path = "jan-macros" }